--- a/src/App.module.css
+++ b/src/App.module.css
@@ -73,10 +73,11 @@ a {
 }
 
 .wrapper {
-    overflow: visible;
+    overflow: scroll;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
     position: static;
+    width: 100vw;
     height: 100vh;
 }
