--- a/src/Home/ChatInfo/ChatInfo.module.css
+++ b/src/Home/ChatInfo/ChatInfo.module.css
@@ -1,15 +1,19 @@
 .info {
     display: flex;
+    flex-wrap: wrap;
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
+    margin: 2rem 0;
 }
 
 .info .left {
-    width: 60%;
+    width: min(450px, 300px);
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
 }
 
 .info .left .box {
@@ -56,11 +60,13 @@
 }
 
 .info .right {
-    width: 40%;
+    width: 300px;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
+    flex-grow: 1;
 }
 
 .info .right > img {
