--- a/src/Nav/Nav.module.css
+++ b/src/Nav/Nav.module.css
@@ -124,7 +124,7 @@
 }
 
 
-@media (max-width: 900px) and (max-height: 900px) {
+@media screen and (max-width: 900px) and (max-height: 900px) {
     .nav {
         position: sticky;
         z-index: 1;
