--- a/src/Shop/Products/Products.module.css
+++ b/src/Shop/Products/Products.module.css
@@ -8,11 +8,42 @@
     font-size: var(--h1-larger);
     color: var(--l-text-color1);
     margin: 2rem 3rem 2rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.products h1 > span {
+    width: 65%;
+    position: relative;
+}
+.products h1 > span:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: linear-gradient(to right, white, rgba(255, 255, 255, 0.483), rgba(255, 255, 255, 0));
+}
+
+.products h1 > .back {
+    border: 0;
+    border-radius: 5rem;
+    font-size: var(--p-medium);
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    background-color: var(--l-bg-highlight);
+    color: white;
+    padding: var(--pad-y-s) var(--pad-x-m);
+    display: flex;
+    align-items: center;
+    gap: var(--gap-small);
+    box-shadow: var(--l-box-shadow);
+    border: 3px solid var(--l-bg-highlight);
 }
 
 .products .wrapItems {
     display: flex;
-    flex-wrap: wrap;
     gap: var(--gap-large);
     justify-content: center;
+    flex-wrap: wrap;
 }
