--- a/src/Shop/Products/Products.module.css
+++ b/src/Shop/Products/Products.module.css
@@ -16,13 +16,18 @@
 .products h1 > span {
     width: 65%;
     position: relative;
+    overflow: hidden;
+    text-wrap: nowrap;
 }
 .products h1 > span:after {
-    content: "";
+    content: "...";
+    height: 100%;
+    width: 80px;
+    text-align: end;
     position: absolute;
     top: 0;
     right: 0;
-    background: linear-gradient(to right, white, rgba(255, 255, 255, 0.483), rgba(255, 255, 255, 0));
+    background: linear-gradient(to left, white, rgba(255, 255, 255, 0.887), rgba(255, 255, 255, 0));
 }
 
 .products h1 > .back {
