--- a/src/Shop/SearchBar/SearchBar.module.css
+++ b/src/Shop/SearchBar/SearchBar.module.css
@@ -71,3 +71,12 @@
     background-color: var(--l-text-unhighlight);
     border: 3px solid var(--l-text-unhighlight);
 }
+
+.darkSearchBar .searchWrapper .searchInput {
+    background-color: white;
+}
+
+.searchBar .searchWrapper > button {
+    background-color: var(--l-text-color1);
+    border-color: var(--l-text-color1);
+}
