--- a/src/Cart/Table/Table.module.css
+++ b/src/Cart/Table/Table.module.css
@@ -20,6 +20,7 @@ table>tbody {
 table>tbody>tr {
     display: flex;
     width: 400px;
+    height: fit-content;
     align-items: center;
     justify-content: space-between;
     font-family: var(--font-title);
