--- a/src/BotBry/ChatBox/ChatBox.module.css
+++ b/src/BotBry/ChatBox/ChatBox.module.css
@@ -38,15 +38,25 @@
     margin-top: .5rem;
     margin-bottom: .5rem;
     padding: .5rem 1rem;
-    color: rgb(71, 10, 213);
+    color: var(--l-text-color1);
     background-color: white;
     border: none;
     box-shadow: 0 0 10px -5px rgb(109, 109, 109);
     border-radius: .5rem;
+    font-family: var(--font-title);
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+}
+
+.chatBox header>div button > .rotate {
+    transform: rotateZ(180deg);
 }
 
 .chatBox header>div button:hover {
-    background-color: #3c2dc3;
+    background-color: var(--l-text-color1);
     color: white;
 }
 
@@ -80,7 +90,7 @@
 .chatBox .chatBody {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: min(100vw, auto);
     height: 100%;
     overflow: hidden;
 }
@@ -107,7 +117,7 @@
 }
 
 .chatBox .chatBody .convoContainer {
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -119,7 +129,7 @@
 }
 
 .chatBox .chatBody .convoContainer .convo {
-    height: fit-content;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -141,9 +151,15 @@
     margin: 0 10px;
     box-shadow: 0 0 5px -2px black;
     width: fit-content;
-    max-width: 80%;
+    max-width: 70vw;
     height: fit-content;
     border-radius: .5rem;
+    overflow: hidden;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar-corner{
+        display: none;
+    }
 }
 
 .chatBox .chatBody .convoContainer .convo li>span {
@@ -174,14 +190,15 @@
 .chatBox .chatBody .chatInput textarea,
 .chatBox .chatBody .chatInput input {
     width: 100%;
-    height: 60%;
-    padding: .2rem .75rem;
+    height: 50%;
+    padding: .5rem .75rem;
     border-radius: .5rem;
     outline: none;
     border: 2.5px gray solid;
     margin: auto;
     margin-left: .5rem;
-    font-size: .8rem;
+    font-size: 1rem;
+    resize: none;
 }
 
 .chatBox .chatBody .chatInput button {
@@ -206,9 +223,11 @@
     background-color: #3c2dc3;
 }
 
-@media screen and (max-width: 500px) and (max-height: 900px) {
-    .chatWrapper .chatBox {
-        width: 100%;
-        height: 100%;
+@media screen and (max-width: 600px){
+    .chatWrapper {
+        width: 100vw;
+    }
+    .chatBox {
+        width: 100vw;
     }
 }
