--- a/src/BotBry/Search/Search.module.css
+++ b/src/BotBry/Search/Search.module.css
@@ -113,6 +113,8 @@
     flex-direction: column;
     width: 100vw;
     height: 100%;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 .search .searches .link {
