--- a/src/Home/ChatInfo/ChatInfo.module.css
+++ b/src/Home/ChatInfo/ChatInfo.module.css
@@ -4,7 +4,7 @@
     width: 100vw;
     height: fit-content;
     padding: 2rem 0 0 0;
-    background-color: rgb(224, 224, 224);
+    background-color: white;
 }
 
 .info .left {
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: center;
     flex-grow: 1;
+    margin-bottom: 2rem;
 }
 
 .info .left .box {
