--- a/src/BotBry/Search/Search.module.css
+++ b/src/BotBry/Search/Search.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: calc(100vh - 4rem);
+    height: 100vh;
     background-color: #ffffff;
     position: absolute;
     top: 4rem;
