--- a/src/BotBry/ChatBox/ChatMessages.module.css
+++ b/src/BotBry/ChatBox/ChatMessages.module.css
@@ -33,7 +33,8 @@
     z-index: 1;
 }
 
-.convo .user, .convo .bryan {
+.convo .user,
+.convo .bryan {
     display: flex;
     align-items: flex-end;
     gap: 0.7rem;
@@ -134,6 +135,7 @@
     .convo {
         width: 100vw;
     }
+
     .messageBox {
         width: 69vw;
         font-size: 0.75rem;
@@ -148,4 +150,93 @@
     margin: .5rem;
     background-color: rgba(237, 237, 237, 0.827);
     box-shadow: 0 0 10px -2px rgb(101, 101, 101);
+}
+
+.convo .thinking {
+    display: flex;
+}
+
+.convo .thinking .wrapper {
+    padding: .5rem .75rem;
+    margin: 0 10px;
+    box-shadow: 0 0 5px -2px black;
+    width: fit-content;
+    max-width: 70vw;
+    height: fit-content;
+    border-radius: .5rem;
+    display: flex;
+    gap: .5rem;
+    background-color: #3094d3;
+    box-shadow: 0 0 10px -2px rgb(101, 101, 101);
+    animation: bumping 1s ease infinite;
+}
+
+.convo .thinking>img {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    padding: .2rem;
+    border-radius: 50%;
+    background-color: rgba(237, 237, 237, 0.827);
+    box-shadow: 0 0 10px -2px rgb(101, 101, 101);
+    animation: rotating 1.5s ease-in-out infinite;
+    margin-left: .5rem;
+}
+
+.convo .thinking .wrapper .dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--l-text-unhighlight);
+    animation: pulse 1.5s ease-in-out infinite;
+}
+
+.convo .thinking .wrapper .dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.convo .thinking .wrapper .dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes rotating {
+    0% {
+        transform: scale(1);
+    }
+
+    60% {
+        transform: scale(1.3) rotateZ(180deg);
+    }
+
+    100% {
+        transform: scale(1) rotateZ(360deg);
+    }
+}
+
+@keyframes bumping {
+
+    0%,
+    80%,
+    100% {
+        transform: scale(1);
+    }
+
+    40% {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes pulse {
+
+    0%,
+    80%,
+    100% {
+        transform: scale(0.6);
+        background-color: rgb(255, 255, 255);
+    }
+
+    40% {
+        transform: scale(1.1);
+        background-color: #2b2b2b;
+    }
 }
